Fix #124817: Incorrect Cycles "Cast Shadow" versioning

This commit fixes a issue where the Cycles "cast shadow" setting
versioning from Blender 4.1 to 4.2 wasn't working properly due to the
use of the wrong parameter name when grabbing the Blender 4.1 setting.

Pull Request: https://projects.blender.org/blender/blender/pulls/124834